2008-09-18  Sam Steingold  <sds@gnu.org>

	* modules/rawsock/rawsock.c (my_check_argument): remove (not used
	since DEFCHECKERs were introduced in 1.10 on 2004-05-14)

2008-09-18  Sam Steingold  <sds@gnu.org>

	* modules/berkeley-db/dbi.lisp (close@db): pass :ABORT as :NOSYNC

2008-09-18  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (on_pnamestring): generalize ...
	(stat_obj): removed
	(path_truncate): do not do begin/end_system_call and error
	reporting, return status instead
	(%SET-FILE-SIZE, FILE-SIZE, FILE-STAT, find_first_file)
	(SET-FILE-STAT, STAT-VFS, FILE-OWNER, copy_attributes_and_close):
	use on_pnamestring

2008-09-18  Sam Steingold  <sds@gnu.org>

	* clhs.lisp (open-http): "user-agent" includes version;
	link to http://www.w3.org/Protocols/rfc2616/rfc2616-sec14.html

2008-09-17  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (POSIX:FILE-SIZE) [WIN32_NATIVE]:
	surround the GetFileSizeEx call with begin/end_system_call;
	use sint64_to_I instead of off_to_I for the return value

2008-09-17  Sam Steingold  <sds@gnu.org>

	* makemake.in (EVERY_INCLUDES_H): fix the logic for adding config.h

2008-09-16  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c: include <sys/param.h>
	(MAXHOSTNAMELEN): fall back to 256 (not 64)
	(MAXPATHLEN): fall back to 4096 (not 1024)
	* modules/syscalls/configure.in: check for <sys/param.h> (for woe32)
	* unix.d: include <sys/param.h> just once
	(MAXHOSTNAMELEN): fall back to 256 (not 64)

2008-09-15  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (POSIX:DOMAINNAME)
	(POSIX::%SETDOMAINNAME): add
	* modules/syscalls/posix.lisp (domainname): add defsetf and export

2008-09-15  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (POSIX:USER-SHELLS): implement
	* modules/syscalls/posix.lisp (USER-SHELLS): export

2008-09-15  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c
	(grp_to_lisp): use gid_to_I instead of UL_to_I
	(GROUP-INFO): use integerp instead of uint32_p
